# keycloak-crd

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml  rust.yaml
src/: lib.rs
src/crd/: client.rs  instance.rs  mod.rs  realm.rs  user.rs
tests/: instance.rs  realm.rs
tests/data/: keycloak_1.yaml  keycloak_realm_1.yaml
