[package]
name = "keycloak-crd"
version = "0.1.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

keywords = ["kubernetes", "operator", "sso", "keycloak"]
license = "EPL-2.0"
description = "Custom resource types for Keycloak"
repository = "https://github.com/ctron/keycloak-crd"

[dependencies]

kube-derive = "0.40"
k8s-openapi = { version = "0.9.0", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_yaml = "0.8"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
